--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -59,7 +59,8 @@
         and the path with the highest strength from $A$ is compared to the strongest
         path from $B$.
         The same occurs with paths from $A$ to $C$, $B$ to $C$, etc.
-        The candidate that has stronger paths to each agent than all other agents wins.
+        The candidate that has stronger paths to each individual agent than all other
+        agents wins.
     } \\
     \hline
 \end{tabular}
