--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -24,7 +24,7 @@
         Agents rank each candidate, and a pairwise margin matrix is generated.
         In the matrix, position $(x, y)$ is the number of rankings that prefer $x$ over
         $y$, minus the number of rankings that prefer $y$ over $x$.
-        A zero-sum game is defined, and an optimal mixed strategy computed.
+        A zero-sum game is defined, and an optimal mixed strategy computed. \vicki{explain the zero sum}
         The winner is then chosen randomly using the optimal mixed strategy.
         See~\cite{Rivest2010} for more details.
     } \\
