--- a/common/frontmatter.tex
+++ b/common/frontmatter.tex
@@ -7,12 +7,12 @@
 \include{abstract}
 \include{publicabstract}
 \include{content/frontmatter/dedication}  % optional
-%\include{acknowl}     % optional TODO: Do I want acknowledgements?
+%\include{acknowl}     % optional
 
 \tableofcontents
 \listoftables
 \listoffigures
 
-% \include{content/frontmatter/notation}  % optional TODO: Update
-% \include{content/frontmatter/acronyms}  % optional TODO: Update
+% \include{content/frontmatter/notation}  % optional
+% \include{content/frontmatter/acronyms}  % optional
 %}}}
