Sections are now on the page page as their text

--- a/chapter1-introduction.tex
+++ b/chapter1-introduction.tex
@@ -22,7 +22,11 @@ preference into one result, as well as determining how best to aggregate all vot
 in a unified-vote/single-winner/single-dimension continuous space model.
 
 \input{content/chapter1/background}
+\newpage
 \input{content/chapter1/previous-work}
+\newpage
 \input{content/chapter1/preliminaries}
+\newpage
 \input{content/chapter1/assumptions}
+\newpage
 \input{content/chapter1/contribution}
