Now using complete sentence

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -21,7 +21,7 @@
         The absolute error as a percent of the preference space by coordination
         mechanism for each voting mechanism and preference distribution.
         Note the y-axis does not have the same scale for each plot.
-        Averaged over 1024 total runs.
+        The results are averaged over 1024 total runs.
         There are 24 total agents.
     }
     \label{fig:distribution-different-scale-error-as-percent-of-space-abs-mean}
@@ -36,7 +36,7 @@
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{0.3}{0.3}.
-            Averaged over 1024 total runs.
+            The results are averaged over 1024 total runs.
             There are 24 total agents.
         }
         \label{fig:beta-.3-.3-error-as-percent-of-space-abs-mean}
@@ -51,7 +51,7 @@
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{4}{1}.
-            Averaged over 1024 total runs.
+            The results are averaged over 1024 total runs.
             There are 24 total agents.
         }
         \label{fig:beta-4-1-error-as-percent-of-space-abs-mean}
@@ -66,7 +66,7 @@
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \betadistribution{50}{50}.
-            Averaged over 1024 total runs.
+            The results are averaged over 1024 total runs.
             There are 24 total agents.
         }
         \label{fig:beta-50-50-error-as-percent-of-space-abs-mean}
@@ -81,7 +81,7 @@
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \gaussiandist.
-            Averaged over 1024 total runs.
+            The results are averaged over 1024 total runs.
             There are 24 total agents.
         }
         \label{fig:normal-error-as-percent-of-space-abs-mean}
@@ -96,7 +96,7 @@
         \caption{
             The absolute error as a percent of the preference space by coordination
             mechanism for each voting mechanism for \uniform{-1}{1}.
-            Averaged over 1024 total runs.
+            The results are averaged over 1024 total runs.
             There are 24 total agents.
         }
         \label{fig:uniform-error-as-percent-of-space-abs-mean}
