Finished up Different Weight

--- a/references/research.bib
+++ b/references/research.bib
@@ -325,6 +325,20 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   year      = {2021},
 }
 
+@article{Moulin1980,
+ ISSN = {00485829, 15737101},
+ URL = {http://www.jstor.org/stable/30023824},
+ author = {H. Moulin},
+ journal = {Public Choice},
+ number = {4},
+ pages = {437--455},
+ publisher = {Springer},
+ title = {On Strategy-Proofness and Single Peakedness},
+ urldate = {2023-04-23},
+ volume = {35},
+ year = {1980}
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectoryLatex-micha-CrimsonSpace:D:\\Projects\\Thesis-Experiments\\Report;}
