Update on Overleaf.

--- a/publicabstract.tex
+++ b/publicabstract.tex
@@ -21,8 +21,7 @@
     participate in important voting processes to ensure their vote is represented.
     We explore `proxy voting,' a system in which voters are able to select another
     individual, or \textit{proxy}, to vote on their behalf.
-    By choosing a good proxy, a voter can still have their vote represented how they
-    want and cause minimal change to the outcome.
+    By choosing a good proxy, a voter can still have their vote represented and cause minimal change to the outcome.
     We additionally explore different ways a proxy can coordinate with their peers,
     as well as different ways to count votes, in order to make proxy voting as
     effective as possible.
