--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -25,9 +25,13 @@
         In the matrix, position $(x, y)$ is the number of rankings that prefer $x$ over
         $y$, minus the number of rankings that prefer $y$ over $x$.
         A zero-sum game is defined, and an optimal mixed strategy is computed.
-        \vicki{Explain the mixed strategy.}
-         A zero-sum game is a situation in which for every point gained by one side,
+        % 05/05/2023: \vicki{Explain the mixed strategy.}
+        A `zero-sum game' is a situation in which for every point gained by one side,
         the other side loses an equal number of points.
+        A `mixed strategy' is when an agent doesn't always choose the same move given
+        a situation; instead, they probabilistically choose between the options.
+        An `optimal mixed strategy' is thus the mixed strategy that yields the most
+        utility, or, in other words, achieves the best results.
         The winner is then chosen randomly using the optimal mixed strategy.
         See~\cite{Rivest2010} for more details.
     } \\
