Fixed Schulze explanation

--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -62,7 +62,7 @@
         An edge going from candidate $A$ to candidate $B$ with a weight of 10 means
         10 more agents prefer $A$ over $B$ than $B$ over $A$.
         Using this graph, multiple paths are generated between candidates.
-        The strength of the path is the sum of the weight of each edge in the path,
+        The strength of the path is the weight of the weakest edge in the path,
         and the path with the highest strength from $A$ is compared to the strongest
         path from $B$.
         The same occurs with paths from $A$ to $C$, $B$ to $C$, etc.
