--- a/common/figures/equations/weighted-midrange.tex
+++ b/common/figures/equations/weighted-midrange.tex
@@ -1,5 +1,5 @@
 \mathbf{mr}(\systemproxies) =
     \frac{
-        \min{\truthof{\systemproxies}} + \max{\truthof{\systemproxies}}
+        \truthof{{\systemproxies}_1} + \truthof{{\systemproxies}_n}
     }
     {2}
