--- a/notations.sty
+++ b/notations.sty
@@ -39,7 +39,7 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\systemagents}{\system_\agents}
 \@newnotation*{\systemcost}{\costof{\system}}
 \@newnotation*{\systemloss}{\lossof{\system}}
-\@newnotation*{\systemproxies}{\system_\proxies}
+\@newnotation*{\systemproxies}{W}
 \@newnotation*{\systemtruth}{\truthof{\system}}
 \@newnotation*{\systemweight}{\weightof{\system}}
 
