--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly. Max 350 words.
 
-    Illness, injury, and other impediments are common occurrences in every day.
+    Illness, injury, and other impediments are common occurrences of every day life.
     Such impediments prevent or deter agents from participating in important parts
     of the voting process, in particular deliberation, bargaining, and the voting
     itself.
