--- a/publicabstract.tex
+++ b/publicabstract.tex
@@ -12,7 +12,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly.
 
-    Illness, injury, and other impediments are common occurrences in every day.
+    Illness, injury, and other impediments are common occurrences of every day life.
     Such impediments prevent or deter voters from participating in important parts
     of the voting process, especially deliberation, bargaining, and the voting
     itself.
