Removes don'ts and doesn'ts

--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -28,7 +28,7 @@
         % 05/05/2023: \vicki{Explain the mixed strategy.}
         A `zero-sum game' is a situation in which for every point gained by one side,
         the other side loses an equal number of points.
-        A `mixed strategy' is when an agent doesn't always choose the same move given
+        A `mixed strategy' is when an agent does not always choose the same move given
         a situation; instead, they probabilistically choose between the options.
         An `optimal mixed strategy' is thus the mixed strategy that yields the most
         utility, or, in other words, achieves the best results.
