--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly. Max 350 words.
 
-    Illness, injury, and other impediments are common occurrences of every day life.
+    Illness, injury, and other impediments are common occurrences of everyday life.
     Such impediments prevent or deter agents from participating in important parts
     of the voting process, in particular deliberation, bargaining, and the voting
     itself.
@@ -20,7 +20,7 @@
     preference space using a combination of $L_p$ aggregation methods.
     As part of this examination, we develop and examine `coordination mechanisms,' by
     which proxies and their constituents are able to find a way to combine their
-    preferences in order for constituents to still have their voices heard.
+    preferences while allowing the constituents to still have their voices heard.
     In exchange, their proxy gains more weight and is able to have a stronger voice in
     deliberations.
     We employ a continuous preference space model and determine the result of a vote
@@ -32,7 +32,7 @@
     better determine how much error is introduced by proxy voting.
     The continuous preference space model also provides a more expressive way of
     casting a vote.
-    We show that proxy voting is effective in many scenarios, and that it is
+    We show that proxy voting is effective in many scenarios and that it is
     consistently better than not allowing inactive agents to vote.
 
 
