--- a/common/cover-page.tex
+++ b/common/cover-page.tex
@@ -2,7 +2,7 @@
 \author{Michael D. Hegerhorst}
 \title{
     Proxy Voting Coordination Mechanisms:\\
-    Determining How Agents should Coordinate in a Continuous Preference Space
+    Determining How Agents Should Coordinate in a Continuous Preference Space
 }
 
 % The Committee
