--- a/common/figures/mathur-voting-mechanisms.tex
+++ b/common/figures/mathur-voting-mechanisms.tex
@@ -54,7 +54,7 @@
     } \\
     \hline
     Schulze & {
-        Agents rank candidates, and are allowed to skip rankings, give the same rank
+        Agents rank the candidates and are allowed to skip rankings, give the same rank
         twice, or not rank a candidate.
         Candidates with the same ranking are said to be equally preferred, and
         unranked candidates are ranked last.
