--- a/publicabstract.tex
+++ b/publicabstract.tex
@@ -12,7 +12,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly.
 
-    Illness, injury, and other impediments are common occurrences of every day life.
+    Illness, injury, and other impediments are common occurrences of everyday life.
     Such impediments prevent or deter voters from participating in important parts
     of the voting process, especially deliberation, bargaining, and the voting
     itself.
@@ -25,9 +25,9 @@
     We additionally explore different ways a proxy can coordinate with their peers,
     as well as different ways to count votes, in order to make proxy voting as
     effective as possible.
-    We show that proxy voting is effective in many scenarios, and that it is
+    We show that proxy voting is effective in many scenarios and that it is
     consistently better than not allowing voters who are unable to fully participate to
-    have their voice heard.
+    have their voices heard.
 
 \end{publicabstract}
 
