Update on Overleaf.

--- a/publicabstract.tex
+++ b/publicabstract.tex
@@ -17,7 +17,7 @@
     of the voting process, especially deliberation, bargaining, and the voting
     itself.
     Without participation, the results of the vote may change.
-    There is a need to provide a system with which voters are still able to
+    There is a need to provide a system in which voters are still able to
     participate in important voting processes to ensure their vote is represented.
     We explore `proxy voting,' a system in which voters are able to select another
     individual, or \textit{proxy}, to vote on their behalf.
