Update on Overleaf.

--- a/common/cover-page.tex
+++ b/common/cover-page.tex
@@ -1,8 +1,7 @@
 % Author and Title Information
 \author{Michael D. Hegerhorst}
 \title{
-    Proxy Voting Coordination Mechanisms:\\
-    Determining How Agents Should Coordinate in a Continuous Preference Space
+    Proxy Voting Coordination Mechanisms: Determining How Agents Should Coordinate in a Continuous Preference Space
 }
 
 % The Committee
