Update on Overleaf.

--- a/content/frontmatter/dedication.tex
+++ b/content/frontmatter/dedication.tex
@@ -1,20 +1,19 @@
 %
-% This is an example of an dedication page.  This is optional,
-% and can contain anything you want to say.
-%
-%  Time-stamp: "[dedication.tex] last modified by Scott Budge (scott) on 2011-08-08 (Monday, 8 August 2011) at 15:46:26 on goga"
-%
-%  Info: $Id$   USU
-%  Revision: $Rev$
-% $LastChangedDate$
-% $LastChangedBy$
+% Dedication
 %
 
 \begin{dedication}
 % \begin{center}
     To Danielle, my constant companion and eternal partner.
+    
+    You are my light and my star, my guiding hope.
+    I love you.
+\newline
+\newline
 
-    Thank you for persisting with me as we endured this roller coaster.
+    And to Miriam, who joined us in our adventure.
+    
+    May you lift others up and help them to be as brilliant as you.
 % \end{center}
 % 
 % If you intend to have a dedication longer than one line, do not put
